Bug 82904 - OO,o-generated Word 95 file has mangled textencoding on load in LO
Summary: OO,o-generated Word 95 file has mangled textencoding on load in LO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: x86 (IA32) Windows (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-08-21 10:59 UTC by Dr. Matthias Weisser
Modified: 2014-08-27 16:19 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Text with which the problem occurs. (103.50 KB, application/x-msword)
2014-08-21 10:59 UTC, Dr. Matthias Weisser
Details
picture showing what OO shows (7.22 KB, image/png)
2014-08-21 11:02 UTC, Dr. Matthias Weisser
Details
picture showing what LO shows (5.61 KB, image/png)
2014-08-21 11:05 UTC, Dr. Matthias Weisser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dr. Matthias Weisser 2014-08-21 10:59:26 UTC
Created attachment 105030 [details]
Text with which the problem occurs.

I have an older text in format .doc which was generated using OO. Trying to open using LO Version 4.2.2.1 produces errors. See pictures.
Comment 1 Dr. Matthias Weisser 2014-08-21 11:02:40 UTC
Created attachment 105031 [details]
picture showing what OO shows

shows correct text.
Comment 2 Dr. Matthias Weisser 2014-08-21 11:05:22 UTC
Created attachment 105032 [details]
picture showing what LO shows

LO does not show correctly what OO shows correctly.
Comment 3 Dr. Matthias Weisser 2014-08-21 11:08:54 UTC
Why does the more modern LO 4.2.2.1 not show correctly what OO 4.0.0 apparently did?
Comment 4 Urmas 2014-08-21 11:28:28 UTC
Confirmed in master.
The document is obviously malformed, but MS Word is able at least copy the contents out without crashing.
Comment 5 Robert Großkopf 2014-08-21 15:36:34 UTC
Have tested a little bit more with different versions of LO.
Last version, which shows the right text, is LO 3.3.4. First version with the wrong text is LO 3.4.0beta1. So I set the version to 3.4.0 release and the keyword "regression".
Comment 6 Regina Henschel 2014-08-21 19:11:36 UTC
The document is a "Word 6.0" document. It opens fine in Word 2010, in SoftMaker 2012 and opens fine in OpenOffice 4.1.1, if you use the correct filter "Word 6.0/95". It is an error of LibreOffice, not of the document.
Comment 7 Commit Notification 2014-08-27 14:07:47 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=47b84f7e5143f445a087fc9ccc4fb29bbd88ff64

Resolves: fdo#82904 non-Japanese ww95 documents claiming ms932 encoding



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2014-08-27 14:17:10 UTC
Its not as straightforward as working in any given version and a simple regression. Word 95 is a pain wrt text encodings
Comment 9 Commit Notification 2014-08-27 16:19:00 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6194e5019954a8680144ee584b04735f3cb3d74b&h=libreoffice-4-3

Resolves: fdo#82904 non-Japanese ww95 documents claiming ms932 encoding


It will be available in LibreOffice 4.3.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.