Resolves: fdo#82904 non-Japanese ww95 documents claiming ms932 encoding

look to the individual component commits for clarity

refactor into GetCharSetFromLanguage
(cherry picked from commit 56c9850145faa9ac04c3f09633e56b6c8c22c6c4)

sync GetCurrentCJKCharSet with GetCurrentCharSet
(cherry picked from commit 4143d7bc7078fb367130e092a354b20da57585cc)

Resolves: fdo#82904 non-Japanese ww95 documents claiming ms932 encoding
(cherry picked from commit 47b84f7e5143f445a087fc9ccc4fb29bbd88ff64)

Change-Id: Ib638dc8f1daaee3b9920153195e090d8dbc5a798
Reviewed-on: https://gerrit.libreoffice.org/11143
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>